# shellOS

./: .gitignore  .gitmodules  LICENSE  README.md  context.md  pyproject.toml  requirements.txt
engine/: pyproject.toml
engine/continuum_engine/: cli.py
engine/continuum_engine/create/: __init__.py  manager.py
engine/continuum_engine/install/: __init__.py  manager.py
engine/continuum_engine/pull/: __init__.py  manager.py
engine/continuum_engine/runs/: manager.py
engine/continuum_engine/workspace/: layout.py  setup.py  validate.py
